Fixed some layout problems

--- a/css/main.scss
+++ b/css/main.scss
@@ -130,6 +130,7 @@ article h6 { font-size: 100%; }
   background-color: lighten($purple-color,15%);
 }
 
+article .badge a,
 .badge a {
   color: $background-color;
   text-decoration: none;
